syntax = "proto3";

option java_multiple_files = true;
option java_package = "morning.cat.grpc.proto";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}

  rpc SayManyRequest (stream HelloRequest) returns (HelloReply) {}

  rpc SayManyToMany (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
